--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "map",
   "version": "0.0.1",
   "description": "async map. iterates both array and objects.",
-  "main": "map.js",
+  "main": "index.js",
   "scripts": {
     "test": "fox"
   },
